--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -7,6 +7,7 @@ default-run = "tmux-mobile"
 [lib]
 name = "tmux_mobile"
 path = "src/lib.rs"
+crate-type = ["staticlib", "cdylib", "rlib"]
 
 [[bin]]
 name = "tmux-mobile"
@@ -27,3 +28,4 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 uuid = { version = "1", features = ["v4"] }
 tauri = { version = "2", features = [] }
+toml = "1.0.3"
