--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,3 +29,5 @@ serde_json = "1"
 uuid = { version = "1", features = ["v4"] }
 tauri = { version = "2", features = [] }
 toml = "1.0.3"
+base64 = "0.22"
+dirs = "5"
