--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "dependencies": {
     "@xterm/addon-fit": "^0.11.0",
-    "@xterm/xterm": "^6.0.0"
+    "@xterm/xterm": "^6.0.0",
+    "katex": "^0.16.33",
+    "marked": "^17.0.3",
+    "mermaid": "^11.12.3"
   }
 }
