fix: PDF preview with pdf.js canvas rendering, bump download limit to 50MB
- Replace iframe data URL with pdf.js page-by-page canvas rendering
- Handles large PDFs that browsers refuse to render via data URL
- Download size limit 10MB→50MB
- Each page rendered at container width, scrollable

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "katex": "^0.16.33",
     "lucide-svelte": "^0.575.0",
     "marked": "^17.0.3",
-    "mermaid": "^11.12.3"
+    "mermaid": "^11.12.3",
+    "pdfjs-dist": "^5.4.624"
   }
 }
